# Flights-LLM-App

./: README.md  pyproject.toml
app/: main.py  routes.py
app/services/: flight_api.py  llm_service.py
templates/: draft_template.j2
